--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	<!-- pure.css responose grids -->
 	<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
 
+	<!-- font awesome for icons -->
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
+	<!-- google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Quattrocento" rel="stylesheet">
+
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -30,27 +36,35 @@
 	<div class="pure-g">
 
 		<!-- header -->
-		<header class="pure-u-1">Meet Me There</header>
+		<header class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center header">Meet Me There</header>
 
 		<!-- project explanation -->
-		<div class="explain pure-u-1">
-			Want to go out to lunch but your friends aren't available? Want to organize a game of basketball
-			in the park but you don't know enough people? Meet new people!
-			<p>
-			Host an event as a Greeter. Join an event as a Meeter. Meet at the designated time and place, and 
-			have a great time!
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
+			Want to go out to lunch but your friends aren't available?
+			<p>Want to organize a game of basketball
+			in the park but you don't know enough people?</p>
+			<p>It's time to meet new people!</p>
+			<p>Host an event as a Greeter. Join an event as a Meeter.</p>
+			<p>Meet at the designated time and place, and have a great time!</p>
 		</div> <!-- explain -->
 
-		<!-- main content -->
-		<div class="select pure-u-1">
+		<!-- select -->
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center select">Which one are you?</div>
 			
-			<!-- greeter -->
-			<div class=""></div>
+		<!-- greeter -->
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 greeter align-center button-font">
+			<button class="pure-button greeter-button">		Greeter
+				<i class="fas fa-user"></i>
+			</button>
+		</div> <!-- greeter -->
 
-		</div> <!-- select -->
-
-		<!-- footer -->
-
+		<!-- meeter -->
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 meeter align-center button-font">	
+			<button class="pure-button meeter-button">
+				Meeter
+				<i class="fas fa-users"></i>
+			</button>
+		</div> <!-- meeter -->
 	</div> <!-- pure-g -->
 </body>
 </html>
