greeter form complete, about page skeleton complete, css still needed

--- a/about.html
+++ b/about.html
@@ -36,45 +36,50 @@
 	<div class="pure-g">
 
 		<!-- header -->
-		<header class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center header">Meet Me There</header>
+		<header class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center header">About</header>
 
 		<!-- Menu -->
 		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center menu">
 			<div class="pure-menu pure-menu-horizontal">
 				<ul class="pure-menu-list">
-					<li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
+					<li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Go Back</a></li>
 				</ul>
 			</div>
 		</div> <!-- menu -->
 
 		<!-- project explanation -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
-			Want to go out to lunch but your friends aren't available?
-			<p>Want to organize a game of basketball
-			in the park but you don't know enough people?</p>
-			<p>It's time to meet new people!</p>
-			<p>Host an event as a Greeter. Join an event as a Meeter.</p>
-			<p>Meet at the designated time and place, and have a great time!</p>
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center about">
+			Meet Me There is a lightweight social application.
+			<p>There's no account to create, and the events delete from the database minutes after the event is over.</p>
+			<p>Simply search for an event near you, and go meet new people.</p>
+			<p>This application was a collaborative effort for the purpose of a project for UNC Chapel Hill's Coding Bootcamp.
 
 		</div> <!-- explain -->
 
 		<!-- select -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center select">Which one are you?</div>
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center select">Developers</div>
 
-		<!-- greeter -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 greeter align-center button-font">
-			<button class="pure-button greeter-button" onclick="location.href='greeters.html'">Greeter
-				<i class="fas fa-user"></i>
-			</button>
-		</div> <!-- greeter -->
+		<!-- developers -->
+		<div class="pure-u-sm-1-2 pure-u-md-1-4 pure-u-lg-1-4 align-center dev">
+			Grey Arnold
+		</div>
 
-		<!-- meeter -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 meeter align-center button-font">	
-			<button class="pure-button meeter-button">
-				Meeter
-				<i class="fas fa-users"></i>
-			</button>
-		</div> <!-- meeter -->
+		<div class="pure-u-sm-2-2 pure-u-md-1-4 pure-u-lg-1-4 align-center dev">
+			Brint Hansen
+		</div>
+
+		<div class="pure-u-sm-1-2 pure-u-md-1-4 pure-u-lg-1-4 align-center dev">
+			Grady Knight
+		</div>
+
+		<div class="pure-u-sm-2-2 pure-u-md-1-4 pure-u-lg-1-4 align-center dev">
+			<img src="assets/images/ashleymoore.jpg" alt="Ashley Moore" class="dev-pic">
+			<br>
+			Ashley Moore
+			<br>
+			<a href="https://ashley-moore.github.io" target="_blank">GitHub</a>
+		</div>
+
 	</div> <!-- pure-g -->
 </body>
 </html>
