can't make button work

--- a/logicTester.html
+++ b/logicTester.html
@@ -6,7 +6,28 @@
         <script src="assets/javascript/app.js"></script>
     </head>
     <body>
-        <div id="theDiv"></div>       
-         
+        <div id="theDiv"></div>   
+        <label>Greeter</label>    
+        <input class="form-control" id="greeterName-input" type="email">
+        <br>
+        <label>lat</label>
+        <input class="form-control" id="lat-input" type="email">
+        <br>
+        <label>long</label>
+        <input class="form-control" id="long-input" type="email">
+        <br>
+        <label>address</label>
+        <input class="form-control" id="eventAddress-input" type="email">
+        <br>
+        <label>start</label>
+        <input class="form-control" id="startTime-input" type="email">
+        <br>
+        <label>end</label>
+        <input class="form-control" id="endTime-input" type="email">
+        <br>
+        <label>event location name</label>
+        <input class="form-control" id="locationName-input" type="email">
+        <br>
+        <button id="click-button">Click Me!!!!</button>
     </body>
 </html>
