greeter/meeter button positions, added background, created meeter page, links work

--- a/greeters.html
+++ b/greeters.html
@@ -43,7 +43,7 @@
 			<div class="pure-menu pure-menu-horizontal">
 				<ul class="pure-menu-list">
 					<li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Go Back</a></li>
-					<li class="pure-menu-item"><a href="#" class="pure-menu-link">Meeter</a></li>
+					<li class="pure-menu-item"><a href="meeters.html" class="pure-menu-link">Meeter</a></li>
 				</ul>
 			</div>
 		</div> <!-- menu -->
