--- a/meeters.html
+++ b/meeters.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +28,6 @@
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 
 	<!-- firebase 3.0 -->
-
 </head>
 
 <body>
@@ -36,45 +36,29 @@
 	<div class="pure-g">
 
 		<!-- header -->
-		<header class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center header">Meet Me There</header>
+		<header class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center header">Meeter <i class="fas fa-users"></i></i></header>
 
 		<!-- Menu -->
 		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center menu">
 			<div class="pure-menu pure-menu-horizontal">
 				<ul class="pure-menu-list">
-					<li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
+					<li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Go Back</a></li>
+					<li class="pure-menu-item"><a href="greeters.html" class="pure-menu-link">Greeter</a></li>
 				</ul>
 			</div>
 		</div> <!-- menu -->
 
-		<!-- project explanation -->
+		<!-- greeter explanation -->
 		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
-			Want to go out to lunch but your friends aren't available?
-			<p>Want to organize a game of basketball
-			in the park but you don't know enough people?</p>
-			<p>It's time to meet new people!</p>
-			<p>Host an event as a Greeter. Join an event as a Meeter.</p>
-			<p>Meet at the designated time and place, and have a great time!</p>
-
+			Find an event you want to attend.
+			<p>Give the Greeter an accurate headcount by clicking the button.</p>
 		</div> <!-- explain -->
 
-		<!-- select -->
-		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center select">Which one are you?</div>
-
-		<!-- greeter -->
-		<div class="pure-u-sm-1-1 pure-u-md-1-2 pure-u-lg-1-1 greeter align-center button-font">
-			<button class="pure-button greeter-button" onclick="location.href='greeters.html'">Greeter
-				<i class="fas fa-user"></i>
-			</button>
-		</div> <!-- greeter -->
-
-		<!-- meeter -->
-		<div class="pure-u-sm-1-1 pure-u-md-1-2 pure-u-lg-1-1 meeter align-center button-font">	
-			<button class="pure-button meeter-button" onclick = "location.href= 'meeters.html'">
-				Meeter
-				<i class="fas fa-users"></i>
-			</button>
-		</div> <!-- meeter -->
+		<!-- event display (dynamically created) -->
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 display-event">
+			Stuff
+		</div> <!-- display-event -->
 	</div> <!-- pure-g -->
+
 </body>
 </html>
