--- a/meeters.html
+++ b/meeters.html
@@ -36,10 +36,10 @@
 	<div class="pure-g">
 
 		<!-- header -->
-		<header class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center header">Meeter <i class="fas fa-users"></i></i></header>
+		<header class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center header">Meeter <i class="fas fa-users"></i></i></header>
 
 		<!-- Menu -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center menu">
+		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center menu">
 			<div class="pure-menu pure-menu-horizontal">
 				<ul class="pure-menu-list">
 					<li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Go Back</a></li>
@@ -49,14 +49,42 @@
 		</div> <!-- menu -->
 
 		<!-- greeter explanation -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
+		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center explain">
 			Find an event you want to attend.
-			<p>Give the Greeter an accurate headcount by clicking the button.</p>
+			<p>Go to the event.</p>
+			
+			<!-- search radius -->
+			<form class="pure-form">
+				<div class="pure-control-group">
+					<label for="search-radius">Search Radius (in miles)</label>
+					<select id="radius">
+						<option>5</option>
+						<option>10</option>
+						<option>15</option>
+						<option>20</option>
+						<option>25</option>
+					</select>
+				</div>
+			</form>
 		</div> <!-- explain -->
 
 		<!-- event display (dynamically created) -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 display-event">
-			Stuff
+		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center display-event">
+			<table class="pure-table pure-table-horizontal event-table">
+				<thead>
+					<tr>
+						<th class="event-header">Event Name</th>
+						<th class="event-header">Greeter</th>
+						<th class="event-header">Location</th>
+						<th class="event-header">Address</th>
+						<th class="event-header">Start Time</th>
+						<th class="event-header">End Time</th>
+					</tr>
+				</thead>
+
+				<tbody></tbody>
+
+			</table>
 		</div> <!-- display-event -->
 	</div> <!-- pure-g -->
 
