Wednesday night addition

--- a/logicTester.html
+++ b/logicTester.html
@@ -10,6 +10,9 @@
         <label>Greeter</label>    
         <input class="form-control" id="greeterName-input" type="email">
         <br>
+        <label>Event name</label>    
+        <input class="form-control" id="eventName-input" type="email">
+        <br>
         <label>lat</label>
         <input class="form-control" id="lat-input" type="email">
         <br>
@@ -30,4 +33,5 @@
         <br>
         <button id="click-button">Click Me!!!!</button>
     </body>
+
 </html>
