--- a/logicTester.html
+++ b/logicTester.html
@@ -3,6 +3,7 @@
         <title>nothin to see here</title>
         <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
         <script src="assets/javascript/app.js"></script>
     </head>
     <body>
@@ -32,6 +33,7 @@
         <input class="form-control" id="locationName-input" type="email">
         <br>
         <button id="click-button">Click Me!!!!</button>
+        <button id="proxTest">Check Distance For First Event</button>
     </body>
 
 </html>
