--- a/logicTester.html
+++ b/logicTester.html
@@ -33,7 +33,7 @@
         <input class="form-control" id="locationName-input" type="email">
         <br>
         <button id="click-button">Click Me!!!!</button>
-        <button id="proxTest">Check Distance For First Event</button>
+        <button id="proxTest">Check Distance For Events</button>
     </body>
 
 </html>
