added displays for weather

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<!-- pure.css -->
 	<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
 
-	<!-- pure.css responose grids -->
+	<!-- pure.css responsive grids -->
 	<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
 
 	<!-- font awesome for icons -->
@@ -27,6 +27,7 @@
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 
 	<!-- firebase 3.0 -->
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 
 </head>
 
@@ -36,10 +37,10 @@
 	<div class="pure-g">
 
 		<!-- header -->
-		<header class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center header">About</header>
+		<header class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center header">About</header>
 
 		<!-- Menu -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center menu">
+		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center menu">
 			<div class="pure-menu pure-menu-horizontal">
 				<ul class="pure-menu-list">
 					<li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Go Back</a></li>
@@ -48,7 +49,7 @@
 		</div> <!-- menu -->
 
 		<!-- project explanation -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center about">
+		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center about">
 			Meet Me There is a lightweight social application.
 			<p>There's no account to create, and the events delete from the database minutes after the event is over.</p>
 			<p>Simply search for an event near you, and go meet new people.</p>
@@ -57,28 +58,12 @@
 		</div> <!-- explain -->
 
 		<!-- select -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center select">Developers</div>
+		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center select">Developers</div>
+
+		<br>
 
 		<!-- developers -->
-		<div class="pure-u-sm-1-2 pure-u-md-1-4 pure-u-lg-1-4 align-center dev">
-			Grey Arnold
-		</div>
 
-		<div class="pure-u-sm-2-2 pure-u-md-1-4 pure-u-lg-1-4 align-center dev">
-			Brint Hansen
-		</div>
-
-		<div class="pure-u-sm-1-2 pure-u-md-1-4 pure-u-lg-1-4 align-center dev">
-			Grady Knight
-		</div>
-
-		<div class="pure-u-sm-2-2 pure-u-md-1-4 pure-u-lg-1-4 align-center dev">
-			<img src="assets/images/ashleymoore.jpg" alt="Ashley Moore" class="dev-pic">
-			<br>
-			Ashley Moore
-			<br>
-			<a href="https://ashley-moore.github.io" target="_blank">GitHub</a>
-		</div>
 
 	</div> <!-- pure-g -->
 </body>
