--- a/greeters.html
+++ b/greeters.html
@@ -28,6 +28,8 @@
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 
 	<!-- firebase 3.0 -->
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+
 </head>
 
 <body>
@@ -53,6 +55,80 @@
 			Create an event. Greet the Meeters at the event.
 			<p>All fields are required.</p>
 		</div> <!-- explain -->
+
+		<!-- weather -->
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
+			Check the weather before creating an event!
+
+			<form class="pure-form pure-form-aligned">
+				<fieldset class="align-center">
+
+					<!-- date -->
+					<div class="pure-control-group">
+						<label for="date">Choose Date</label>
+						<input type="date" name="date">
+					</div>
+
+					<!-- start time -->
+					<div class="pure-control-group">
+						<label for="start">Choose Time</label>
+						<select id="start">
+							<option>--:-- --</option>
+							<option>12:00 AM</option>
+							<option>12:30 AM</option>
+							<option>1:00 AM</option>
+							<option>1:30 AM</option>
+							<option>2:00 AM</option>
+							<option>2:30 AM</option>
+							<option>3:00 AM</option>
+							<option>3:30 AM</option>
+							<option>4:00 AM</option>
+							<option>4:30 AM</option>
+							<option>5:00 AM</option>
+							<option>5:30 AM</option>
+							<option>6:00 AM</option>
+							<option>6:30 AM</option>
+							<option>7:00 AM</option>
+							<option>7:30 AM</option>
+							<option>8:00 AM</option>
+							<option>8:30 AM</option>
+							<option>9:00 AM</option>
+							<option>9:30 AM</option>
+							<option>10:00 AM</option>
+							<option>10:30 AM</option>
+							<option>11:00 AM</option>
+							<option>11:30 AM</option>
+							<option>12:00 PM</option>
+							<option>12:30 PM</option>
+							<option>1:00 PM</option>
+							<option>1:30 PM</option>
+							<option>2:00 PM</option>
+							<option>2:30 PM</option>
+							<option>3:00 PM</option>
+							<option>3:30 PM</option>
+							<option>4:00 PM</option>
+							<option>4:30 PM</option>
+							<option>5:00 PM</option>
+							<option>5:30 PM</option>
+							<option>6:00 PM</option>
+							<option>6:30 PM</option>
+							<option>7:00 PM</option>
+							<option>7:30 PM</option>
+							<option>8:00 PM</option>
+							<option>8:30 PM</option>
+							<option>9:00 PM</option>
+							<option>9:30 PM</option>
+							<option>10:00 PM</option>
+							<option>10:30 PM</option>
+							<option>11:00 PM</option>
+							<option>11:30 PM</option>
+						</select>
+					</div>
+				</fieldset>
+			</form>
+
+			<div class="align-center display-weather"></div>
+		</div> <!-- weather -->
 
 		<!-- event creation (forms) -->
 		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 create-event">
