--- a/meeters.html
+++ b/meeters.html
@@ -28,6 +28,8 @@
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 
 	<!-- firebase 3.0 -->
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+	
 </head>
 
 <body>
@@ -51,7 +53,7 @@
 		<!-- greeter explanation -->
 		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center explain">
 			Find an event you want to attend.
-			<p>Go to the event.</p>
+			<p>Go, meet new people, and have a great time!</p>
 			
 			<!-- search radius -->
 			<form class="pure-form">
@@ -68,8 +70,15 @@
 			</form>
 		</div> <!-- explain -->
 
+		<!-- weather -->
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
+			Check the weather before you decide!
+
+			<div class="align-center display-weather"></div>
+		</div> <!-- weather -->
+
 		<!-- event display (dynamically created) -->
-		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center display-event">
+		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 display-event">
 			<table class="pure-table pure-table-horizontal event-table">
 				<thead>
 					<tr>
