weather box styling, error message ready

--- a/greeters.html
+++ b/greeters.html
@@ -57,11 +57,11 @@
 		</div> <!-- explain -->
 
 		<!-- weather -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
-			Check the weather before creating an event!
-
+		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 explain">
+			<div class="align-center">Check the weather before creating an event!</div>
+			<p>
 			<form class="pure-form pure-form-aligned">
-				<fieldset class="align-center">
+				<fieldset>
 
 					<!-- date -->
 					<div class="pure-control-group">
@@ -276,7 +276,12 @@
 						<button type="submit" class="pure-button pure-button-primary" id="submit">Create Event</button>
 					</div>
 				</fieldset>
+
+				<div class="align-center" id="error-message"></div>
 			</form>
+
+
+
 		</div> <!-- create-event -->
 	</div> <!-- pure-g -->
 
