--- a/logicTester.html
+++ b/logicTester.html
@@ -34,6 +34,7 @@
         <br>
         <button id="click-button">Click Me!!!!</button>
         <button id="proxTest">Check Distance For Events</button>
+        <button id="weatherTest">Weather</button>
         <div id="weatherHolder">weather holder</div>
     </body>
 
