attempting to fix grids on html pages

--- a/greeters.html
+++ b/greeters.html
@@ -57,7 +57,7 @@
 		</div> <!-- explain -->
 
 		<!-- weather -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 explain">
+		<div class="pure-u-1 explain">
 			<div class="align-center">Check the weather before creating an event!</div>
 			<p>
 			<form class="pure-form pure-form-aligned">
@@ -131,7 +131,7 @@
 		</div> <!-- weather -->
 
 		<!-- event creation (forms) -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 create-event">
+		<div class="pure-u-1 create-event">
 
 			<form class="pure-form pure-form-aligned greeter-form">
 				<fieldset>
