--- a/meeters.html
+++ b/meeters.html
@@ -51,7 +51,7 @@
 		</div> <!-- menu -->
 
 		<!-- greeter explanation -->
-		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center explain">
+		<div class="pure-u-1 align-center explain">
 			Find an event you want to attend.
 			<p>Go, meet new people, and have a great time!</p>
 			
@@ -71,7 +71,7 @@
 		</div> <!-- explain -->
 
 		<!-- weather -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 explain">
+		<div class="pure-u-1 explain">
 			<div class="align-center">Check the weather before you decide!</div>
 			<p>
 				<form class="pure-form pure-form-aligned">
