--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 		</div> <!-- explain -->
 
 		<!-- select -->
-		<div class="pure-u-1 align-center dev">Developers</div>
+		<div class="pure-u-1 align-center dev-header">Developers</div>
 
 		<br>
 
