attempted and failed style changes

--- a/meeters.html
+++ b/meeters.html
@@ -80,7 +80,7 @@
 						<!-- date -->
 						<div class="pure-control-group">
 							<label for="date">Choose Date</label>
-							<input type="date" name="date">
+							<input type="date" name="date" id="meeter-weather-date">
 						</div>
 
 						<!-- start time -->
