--- a/greeters.html
+++ b/greeters.html
@@ -51,7 +51,7 @@
 		</div> <!-- menu -->
 
 		<!-- greeter explanation -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
+		<div class="pure-u-1 align-center explain">
 			Create an event. Greet the Meeters at the event.
 			<p>All fields are required.</p>
 		</div> <!-- explain -->
@@ -66,7 +66,7 @@
 					<!-- date -->
 					<div class="pure-control-group">
 						<label for="date">Choose Date</label>
-						<input type="date" name="date">
+						<input type="date" name="date" id="greeter-weather-date">
 					</div>
 
 					<!-- start time -->
@@ -156,7 +156,7 @@
 					<!-- date -->
 					<div class="pure-control-group">
 						<label for="date">Event Date</label>
-						<input type="date" name="date">
+						<input type="date" name="date" id="greeter-date">
 					</div>
 
 					<!-- start time -->
