buttons for search and weather

--- a/greeters.html
+++ b/greeters.html
@@ -124,6 +124,11 @@
 							<option>11:30 PM</option>
 						</select>
 					</div>
+
+					<!-- submit button -->
+					<div class="pure-controls">
+						<button type="submit" class="pure-button pure-button-primary" id="get-weather">Get Weather</button>
+					</div>
 				</fieldset>
 			</form>
 
