--- a/about.html
+++ b/about.html
@@ -20,21 +20,12 @@
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<!-- jquery -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-	<!-- custom javascript -->
-	<script type="text/javascript" src="assets/javascript/app.js"></script>
-
-	<!-- firebase 3.0 -->
-	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-
 </head>
 
 <body>
 
 	<!-- pure grid -->
-	<div class="pure-g">
+	<div class="pure-g align-center">
 
 		<!-- header -->
 		<header class="pure-u-1 align-center header">About</header>
@@ -58,9 +49,30 @@
 		</div> <!-- explain -->
 
 		<!-- select -->
-		<div class="pure-u-1 align-center dev-header">Developers</div>
+		<div class="pure-u-1 pure-u-md-1 align-center dev-header">Developers</div>
 
 		<!-- developers -->
+		<div class="pure-u-1 pure-u-md-1-4 align-center">
+			<img src="assets/images/greyarnold.jpg" al="Grey Arnold" class="dev-pic" >
+			<br>
+			Grey Arnold
+		</div>
+		<div class="pure-u-1 pure-u-md-1-4 align-center">
+			<img src="assets/images/greyarnold.jpg" al="Grey Arnold" class="dev-pic" >
+			<br>
+			Grey Arnold
+		</div>
+		<div class="pure-u-1 pure-u-md-1-4 align-center">
+			<img src="assets/images/greyarnold.jpg" al="Grey Arnold" class="dev-pic" >
+			<br>
+			Grey Arnold
+		</div>
+		<div class="pure-u-1 pure-u-md-1-4 align-center">
+			<img src="assets/images/greyarnold.jpg" al="Grey Arnold" class="dev-pic" >
+			<br>
+			Grey Arnold
+		</div>
+
 
 	</div> <!-- pure-g -->
 </body>
