location, weather, search buttons added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
 			<p>It's time to meet new people!</p>
 			<p>Host an event as a Greeter. Join an event as a Meeter.</p>
 			<p>Meet at the designated time and place, and have a great time!</p>
+			<p>But first, we need your location.</p>
 
+			<!-- get user location -->
+			<form class="pure-form">
+				<fieldset>
+					<!-- submit button -->
+					<button type="submit" class="pure-button pure-button-primary" id="get-user-location"><i class="fas fa-globe"></i> Give Location</button>
+				</fieldset>
+			</form>
 		</div> <!-- explain -->
 
 		<!-- select -->
