--- a/meeters.html
+++ b/meeters.html
@@ -69,13 +69,13 @@
 
 					<!-- submit button -->
 					&nbsp;&nbsp;&nbsp;&nbsp;
-					<button type="submit" class="pure-button pure-button-primary" id="search">Search</button>
+					<button type="submit" class="pure-button pure-button-primary" id="search"><i class="fas fa-search"></i> Search</button>
 				</fieldset>
 			</form>
 		</div> <!-- explain -->
 
 		<!-- weather -->
-		<div class="pure-u-1 explain">
+		<div class="pure-u-1 weather">
 			<div class="align-center">Check the weather before creating an event!</div>
 			<p>
 				<form class="pure-form pure-form-aligned">
