--- a/greeters.html
+++ b/greeters.html
@@ -132,7 +132,7 @@
 				</fieldset>
 			</form>
 
-			<div class="align-center display-weather"></div>
+			<div class="align-center display-weather" id="testWeather"></div>
 		</div> <!-- weather -->
 
 		<!-- event creation (forms) -->
