--- a/meeters.html
+++ b/meeters.html
@@ -150,7 +150,7 @@
 					</fieldset>
 				</form>
 
-				<div class="align-center display-weather"></div>
+				<div class="align-center display-weather" id="testWeather"></div>
 			</div> <!-- weather -->
 
 
@@ -168,7 +168,7 @@
 						</tr>
 					</thead>
 
-					<tbody></tbody>
+					<tbody id="appendTableInfoHere"></tbody>
 
 				</table>
 			</div> <!-- display-event -->
