change display function

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 
 	<!-- firebase 3.0 -->
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 
 </head>
 
