--- a/greeters.html
+++ b/greeters.html
@@ -24,6 +24,9 @@
 	<!-- jquery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+	<!-- moment -->
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+	
 	<!-- custom javascript -->
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 
