--- a/meeters.html
+++ b/meeters.html
@@ -21,6 +21,9 @@
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+	<!-- moment -->
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
 	<!-- jquery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
