--- a/greeters.html
+++ b/greeters.html
@@ -55,9 +55,9 @@
 			Create an event. Greet the Meeters at the event.
 			<p>All fields are required.</p>
 		</div> <!-- explain -->
-
+		
 		<!-- weather -->
-		<div class="pure-u-1 explain">
+		<div class="pure-u-1 weather">
 			<div class="align-center">Check the weather before creating an event!</div>
 			<p>
 			<form class="pure-form pure-form-aligned">
