--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 	<div class="pure-g">
 
 		<!-- header -->
-		<header class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center header">Meet Me There</header>
+		<header class="pure-u-1 pure-u-md-1 align-center header">Meet Me There</header>
 
 		<!-- Menu -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center menu">
+		<div class="pure-u-1 pure-u-md-1 align-center menu">
 			<div class="pure-menu pure-menu-horizontal">
 				<ul class="pure-menu-list">
 					<li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
@@ -49,7 +49,7 @@
 		</div> <!-- menu -->
 
 		<!-- project explanation -->
-		<div class="pure-u-1 pure-u-md-1 pure-u-lg-1 align-center explain">
+		<div class="pure-u-1 pure-u-md-1 align-center explain">
 			Want to go out to lunch but your friends aren't available?
 			<p>Want to organize a game of basketball
 			in the park but you don't know enough people?</p>
@@ -68,17 +68,17 @@
 		</div> <!-- explain -->
 
 		<!-- select -->
-		<div class="pure-u-sm-1-1 pure-u-md-1-1 pure-u-lg-1-1 align-center select">Which one are you?</div>
+		<div class="pure-u-1 pure-u-md-1 align-center select">Which one are you?</div>
 
 		<!-- greeter -->
-		<div class="pure-u-sm-1-1 pure-u-md-1-2 pure-u-lg-1-1 greeter align-center button-font">
+		<div class="pure-u-1 pure-u-md-1 greeter align-center button-font">
 			<button class="pure-button greeter-button" onclick="location.href='greeters.html'">Greeter
 				<i class="fas fa-user"></i>
 			</button>
 		</div> <!-- greeter -->
 
 		<!-- meeter -->
-		<div class="pure-u-sm-1-1 pure-u-md-1-2 pure-u-lg-1-1 meeter align-center button-font">	
+		<div class="pure-u-1 pure-u-md-1 meeter align-center button-font">	
 			<button class="pure-button meeter-button" onclick = "location.href= 'meeters.html'">
 				Meeter
 				<i class="fas fa-users"></i>
