--- a/meeters.html
+++ b/meeters.html
@@ -51,7 +51,7 @@
 		</div> <!-- menu -->
 
 		<!-- greeter explanation -->
-		<div class="pure-u-1 align-center explain">
+		<div class="pure-u-1 pure-u-md-1 align-center explain">
 			Find an event you want to attend.
 			<p>Go, meet new people, and have a great time!</p>
 			
