font styling to table

--- a/meeters.html
+++ b/meeters.html
@@ -171,7 +171,7 @@
 						</tr>
 					</thead>
 
-					<tbody id="appendTableInfoHere"></tbody>
+					<tbody class="tbody" id="appendTableInfoHere"></tbody>
 
 				</table>
 			</div> <!-- display-event -->
